fix isseue where there was a gap bet top of the page and hte header

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,10 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~@fortawesome/fontawesome-free/css/all.css";
 
-body { 
-    margin: 0;
-    padding: 0
-  }
+body,html {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  position: relative;
+  top: -12px;
+}
